# gmail_cli

./: Cargo.toml
src/: app.rs  gmail_api.rs  main.rs  terminal_ui.rs  ui.rs
