[package]
name = "gmail_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
yup-oauth2 = "8.3"
async-trait = "0.1"
crossterm = "0.26"
tui = "0.19"
open = "4.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"