[package]
name = "gmail-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
unicode-width = "0.1.8"
tokio = { version = "1.28", features = ["full"] }
yup-oauth2 = "8.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
tui = "0.19"
crossterm = "0.26"
async-trait = "0.1"
html2text = "0.5"
pulldown-cmark = "0.9"