[package]
name = "gmail-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
yup-oauth2 = "8.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
html2text = "0.6"
pulldown-cmark = "0.9"
crossterm = "0.25"
tui = "0.19"
unicode-width = "0.1"
futures = "0.3"